deployment/envoy_config.yml
#static_resources:
#  listeners:
#    - name: listener_8080
#      address:
#        socket_address:
#          address: 0.0.0.0
#          port_value: 8081
#      filter_chains:
#        - filters:
#            - name: envoy.filters.network.http_connection_manager
#              typed_config:
#                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#                access_log:
#                  - name: envoy.access_loggers.file
#                    typed_config:
#                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
#                      path: /dev/stdout
#                codec_type: AUTO
#                stat_prefix: ingress_http
#                route_config:
#                  name: local_route
#                  virtual_hosts:
#                    - name: backend
#                      domains: ["*"]
#                      routes:
#                        - match:
#                            prefix: "/"
#                          route:
#                            cluster: ratehub_api_service
#                http_filters:
#                  - name: envoy.filters.http.router
#
#  clusters:
#    - name: ratehub_api_service
#      connect_timeout: 0.25s
#      type: STATIC
#      lb_policy: ROUND_ROBIN
#      load_assignment:
#        cluster_name: ratehub_api_service
#        endpoints:
#          - lb_endpoints:
#              - endpoint:
#                  address:
#                    socket_address:
#                      address: 127.0.0.1
#                      port_value: 8080

admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 127.0.0.1, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                      log_format:
                        json_format:
                          authority: '%REQ(:AUTHORITY)%'
                          bytes_received: '%BYTES_RECEIVED%'
                          bytes_sent: '%BYTES_SENT%'
                          connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
                          downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                          downstream_remote_address: '%DOWNSTREAM_REMOTE_ADDRESS%'
                          duration: '%DURATION%'
                          method: '%REQ(:METHOD)%'
                          path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                          protocol: '%PROTOCOL%'
                          request_id: '%REQ(X-REQUEST-ID)%'
                          requested_server_name: '%REQUESTED_SERVER_NAME%'
                          response_code: '%RESPONSE_CODE%'
                          response_code_details: '%RESPONSE_CODE_DETAILS%'
                          response_flags: '%RESPONSE_FLAGS%'
                          route_name: '%ROUTE_NAME%'
                          start_time: '%START_TIME%'
                          upstream_cluster: '%UPSTREAM_CLUSTER%'
                          upstream_host: '%UPSTREAM_HOST%'
                          upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
                          upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
                          upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
                          user_agent: '%REQ(USER-AGENT)%'
                          x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: ratehub_api_service }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: ratehub_api_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ratehub_api_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
